--- a/Hotel.Presentation.Customer/Hotel.Presentation.Customer.csproj
+++ b/Hotel.Presentation.Customer/Hotel.Presentation.Customer.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Hotel.Domain\Hotel.Domain.csproj" />
+    <ProjectReference Include="..\Hotel.Persistence\Hotel.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
